examples/good/adt/expr.gr
data Expr a where
  Const : Int -> Expr a;
  Add : Expr a -> Expr a -> Expr a

eval : Expr a -> a
eval x =
    case x of {
      (Const n) -> n;
      (Add x y) -> eval x + eval y
    }
