examples/illtyped/badKind.gr
id : forall (a : Nat) . Int -> a
id x = x